@@ -18,6 +18,7 @@
 			<li><a href="/tasks">Tasks</a></li>
 			<li><input type="text" id="doujinsearch" oninput="searchFilter()" placeholder="Search collection..."></li>
 			<li><button class="navbar-button" onclick="update_list()">Refresh</button></li>
+			<li><button class="navbar-button" onclick="repair()">Repair Thumbnails</button></li>
 		</ul>
 		<div class="grid-container" id="grid-container" style="margin: 12px;">
 			<!--
@@ -109,6 +110,9 @@
 				$('#' + item['id']).show();
 			});
 		}
+	}
+	function repair() {
+		$.post('/repair');
 	}
 	</script>
 	</body>
